@@ -18,6 +18,7 @@
 	- Fixed variable list loading
   - Fixed variable selection and display
   - Implemented basic javascript array renderer
+  - Implemented SESSION variables list
   
 2007-02-02 - Release Version: 0.0.5
 
